# lama_server_with_rag

./: .gitignore
.cache/clangd/index/: amx.cpp.657F572CAAD384B0.idx  amx.h.F529926FCE302A46.idx  arg.cpp.84F2B516470B5E17.idx  arg.h.2CAD2DDF8CECDB8B.idx  base64.hpp.DE415FA5871F9D64.idx  batched-bench.cpp.2B18E13B4AA05584.idx  batched.cpp.85F73E12C5BA063C.idx  binary-ops.cpp.F3C86D196577669C.idx  binary-ops.h.0441FA4653B8E6E9.idx  build-info.cpp.7F4231F30EC238D2.idx  chat-template.hpp.B6E037C80DEB1FA9.idx  chat.cpp.B6A3B2BF3448C2F5.idx  chat.h.FF357A3D1E09368F.idx  clip-impl.h.31A7977DA6FF7AD2.idx  clip.cpp.635BFFD090FC0DA0.idx  clip.h.04AB7542B2DBF52E.idx  common.cpp.C63A79CBC1A9643A.idx  common.h.23EC95C38D9EBDE8.idx  common.h.6C0058723C2BFC11.idx  common.h.DBC604F8111B4D80.idx  console.cpp.3FCEA7DF0A4E2B70.idx  console.h.0FE2665F532A2F46.idx  convert-llama2c-to-ggml.cpp.7721DCD31A7E83E3.idx  crypto_utils.cpp.E839BCAC239A31C6.idx  crypto_utils.h.26CF4D8BD6477D22.idx  cvector-generator.cpp.B4BA0C4C9CAC1ABD.idx  deprecation-warning.cpp.385F4A21C1B86F89.idx  ecies_utils.cpp.EB4E814C8CADC256.idx  ecies_utils.h.A4649C2D19767E14.idx  embedding.cpp.658BDF685ACB5CCF.idx  eval-callback.cpp.D4AF0414E3E355E8.idx  export-lora.cpp.52A8BDF81A1EAC10.idx  finetune.cpp.67C4B5DB49FC7CD8.idx  gen-docs.cpp.3B03D56C92CF2BCB.idx  get-model.cpp.035F09857179F8B7.idx  get-model.h.F2AB3C19378114DD.idx  ggml-alloc.c.7271374B7C0868FC.idx  ggml-alloc.h.66B1CF2025112215.idx  ggml-backend-impl.h.7B3809A4ADAE2AF1.idx  ggml-backend-reg.cpp.8AD5E192DB3F08A7.idx  (+175 more)
common/: arg.cpp  build-info.cpp  common.h
examples/: CMakeLists.txt
examples/secret_llama/: CMakeLists.txt  llm_engine.h  main.cpp  secret-llama.cpp  secret_llama.h
tools/: CMakeLists.txt
tools/acme_lw/: CMakeLists.txt  acme-exception.cpp  acme-exception.h  acme-lw.cpp  acme-lw.h  http.cpp  http.h
tools/rag_core/: CMakeLists.txt  crypto_utils.cpp  postgres_client.cpp  postgres_client.h  rag_database.h
tools/rag_core_test/: CMakeLists.txt  test_rag_core.cpp
tools/self_signed_cert/: CMakeLists.txt  main.cpp  self_signed.cpp  self_signed.h
tools/server/: CMakeLists.txt  server.cpp
tools/server/webui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
tools/server/webui/public/: manifest.json
tools/server/webui/src/: App.tsx  Config.ts  index.scss  main.tsx
tools/server/webui/src/components/: AvailableModelDisplay.tsx  ChatScreen.tsx  EmbeddingDisplayModal.tsx  Header.tsx  InputConfigField.tsx  RagConnectionManager.tsx  SettingDialog.tsx  Sidebar.tsx  SwitchSpecificConfigElem.tsx  app-sidebar.tsx  logo.tsx  useChatExtraContext.tsx
tools/server/webui/src/components/nav/: admin.tsx  chats.tsx  header.tsx
tools/server/webui/src/utils/: app.context.tsx  storage.ts
tools/tools/rag_core/: CMakeLists.txt  crypto_utils.cpp  crypto_utils.h  ecies_utils.cpp  ecies_utils.h  postgres_client.cpp
tools/tools/rag_core_test/: test_rag_core.cpp
tools/tools/server/: CMakeLists.txt  server.cpp
tools/tools/server/webui/src/components/: Sidebar.tsx
tools/tools/server/webui/src/utils/: app.context.tsx
